--- a/force-app/main/default/aura/Expenses/Expenses.cmp
+++ b/force-app/main/default/aura/Expenses/Expenses.cmp
@@ -1,14 +1,19 @@
-<aura:component implements="force:appHostable">
+<aura:component implements="force:appHostable"
+                controller="ExpensesController">
+
+  <aura:handler name="init" action="{!c.doInit}" value="{!this}"/>
+  <aura:attribute name="expenses" type="Expense__c[]"/>
 
   <!-- PAGE HEADER -->
-  <lightning:layout class="slds-page-header slds-page-header--object-home">
+  <lightning:layout class="slds-page-header slds-page-header_object-home">
     <lightning:layoutItem>
-      <lightning:icon iconName="standard:scan_card" alternativeText="My Expenses" />
+      <lightning:icon iconName="standard:scan_card"
+                      alternativeText="My Expenses" />
     </lightning:layoutItem>
     <lightning:layoutItem padding="horizontal-small">
       <div class="page-section page-header">
-        <h1 class="slds-text-heading--label">Expenses</h1>
-        <h2 class="slds-text-heading--medium">My Expenses</h2>
+        <h1 class="slds-text-heading_label">Expenses</h1>
+        <h2 class="slds-text-heading_medium">My Expenses</h2>
       </div>
     </lightning:layoutItem>
   </lightning:layout>
@@ -17,10 +22,18 @@
   <!-- EXPENSE FORM -->
   <lightning:layout>
     <lightning:layoutItem padding="around-small" size="6">
-      <!-- [[ expense form goes here ]] -->
+      <!-- ExpensesForm component -->
+      <c:ExpensesForm />
     </lightning:layoutItem>
   </lightning:layout>
   <!-- / EXPENSE FORM -->
+
+  <!-- EXPENSES LIST -->
+  <lightning:layoutItem padding="around-small" size="6">
+    <!-- ExpenseList component -->
+    <c:ExpensesList expenses="{!v.expenses}" />
+  </lightning:layoutItem>
+  <!-- / EXPENSES LIST -->
 
   <!-- FOOTER -->
   <!-- / FOOTER -->
