Update expenses form

--- a/force-app/main/default/aura/ExpensesForm/ExpensesForm.cmp
+++ b/force-app/main/default/aura/ExpensesForm/ExpensesForm.cmp
@@ -52,7 +52,7 @@
                         checked="{!v.newExpense.Reimbursed__c}"
         />
         <lightning:button label="Create Expense"
-                        class="slds-m-top--medium"
+                        class="slds-m-top_medium"
                         variant="brand"
                         onclick="{!c.clickCreate}" />
       </form>
