--- a/force-app/main/default/aura/ExpensesListItem/ExpensesListItem.cmp
+++ b/force-app/main/default/aura/ExpensesListItem/ExpensesListItem.cmp
@@ -1,7 +1,10 @@
 <aura:component>
+  <!-- updateExpense Event -->
+  <aura:registerEvent name="updateExpense" type="c:ExpenseUpdated"/>
   <aura:attribute name="expense" type="Expense__c" />
+  
   <!-- Id, Name, Amount__c, Client__c, Date__c, Reimbursed__c, CreatedDate -->
-  <lightning:card title="{!v.item.Name}">
+  <lightning:card title="{!v.expense.Name}">
     <p class="slds-text-headin_small slds-p-horizontal_small">
       Amount:
       <lightning:formattedNumber value="{!v.expense.Amount__c}"
@@ -17,7 +20,8 @@
       <lightning:input type="toggle"
                       label="Reimbursed"
                       name="Reimbursed"
-                      checked="{!v.expense.Reimbursed__c}" />
+                      checked="{!v.expense.Reimbursed__c}"
+                      onchange="{!c.toggleReimbursed}" />
     </p>
   </lightning:card>
 </aura:component>
